add more stories and use cases

--- a/src/__mocks__/styles.css
+++ b/src/__mocks__/styles.css
@@ -16,6 +16,7 @@
   --h3-color: var(--color-base-950);
   --input-padding: 4px 8px;
   --size-4-2: 8px;
+  --text-faint: #B7B5AC;
 
   /** Internal variables */
 
